--- a/404.html
+++ b/404.html
@@ -1,6 +1,4 @@
----
-layout: default
----
+--- layout: default ---
 
 <style type="text/css" media="screen">
   .container {
@@ -8,6 +6,7 @@ layout: default
     max-width: 600px;
     text-align: center;
   }
+
   h1 {
     margin: 30px 0;
     font-size: 4em;
