--- a/histoire/index.html
+++ b/histoire/index.html
@@ -1,7 +1,7 @@
 --- 
 layout: default 
-header_img: site 
-title: 'Bienvenue' 
+header_img: Post 
+title: 'Liste des histoires' 
 ---
   <div class="row">
     {% for post in paginator.posts %}
