--- a/histoire/index.html
+++ b/histoire/index.html
@@ -1,8 +1,8 @@
----
+--- 
 layout: default 
 header_img: Post 
 title: 'Liste des histoires' 
-current: histoire
+current: histoire 
 ---
 <div class="row">
   {% for post in paginator.posts %}
@@ -10,7 +10,7 @@ current: histoire
     <div class="thumbnail">
       <img src="{{ 'files/post-bg.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="{{ post.title }}">
       <div class="caption">
-        <h3>{{ post.title }}</h3> publié le {{ post.date | date: "%d/%m/%Y" }} par {% if post.email %}<a href="mailto:{{ post.email }}">{% endif %}{{ post.auteur}}{% if post.email %}</a>{% endif %}
+        <h3>{{ post.title }}</h3> le {{ post.date | date: "%d/%m/%Y" }} par {% if post.email %}<a href="mailto:{{ post.email }}">{% endif %}{{ post.auteur}}{% if post.email %}</a>{% endif %}
         <p><a href="{{ post.url }}" class="btn btn-primary" role="button">lire</a></p>
       </div>
     </div>
